# architecture-of-ml-systems

./: .directory  .gitignore  02_display_images.ipynb  LICENSE  README.md  config.py  data_acquisition.py  data_acquisition_benni_changes.py  data_preparation.py  epx00_data_acquisition_and_plots.ipynb  exp01_train_model.ipynb  exp02_hyperparameter_search.ipynb  exp03_data_augmentation.ipynb  kaggle-notebook.ipynb  kaggle_make_notebook_and_run.ipynb  main copy.ipynb  main.ipynb  main_bennis_changes.ipynb  pyproject.toml  requirements.txt  task1.ipynb  task_01_data_acquisition.ipynb  test_handler_with_dataset.ipynb  tmp_file.ipynb  utils.py
.devcontainer/: devcontainer.json  requirements.txt  xxdevcontainer.json
Experiment_Scripts/: Task01.py  experiment_main.sh
JLB-Tests/: bounding_mask.py
JLB-Tests/utilities/: Lightning_utils.py  data_processing.py  dataset_jlb.py  plot_utils.py  utils.py
JLB_Tests/: test_datasets.ipynb  testing_images.py
Joscha/: 03_xx.ipynb  04_xx.ipynb  requirements.txt  utils.py
Task1/: Satellite_IMGs.md
Task2/: bennis_try.ipynb  main.ipynb
data_acquisition/: datahandler.py
data_augmentation/: transformations.py
data_preperation/: dataset.py
models/: baseconvnet.py  lightning_utils.py
models/exp01/ConvNetSimple/: .lr_find_2415d91c-cbbf-4a37-b07f-31f0113513b0.ckpt  best_model-v1.ckpt  best_model.ckpt
utilities/: Lightning_utils.py  data_processing.py  dataset_jlb.py  plot_utils.py  utils.py
utilities/Task1/: Task01_satellite_imgs.ipynb  convert_to_script.sh
utilities/base/: base_model.py
utilities/segnet/: segnet.py
(+10 files in other folders)
