[tool.poetry]
name = "architecture-of-ml-systems"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyrosm = "^0.6.2"
matplotlib = "^3.8.4"
openeo = "^0.29.0"
utils = "^1.0.2"
scikit-learn = "^1.5.0"
torch = "^2.3.1"
ipywidgets = "^8.1.3"
torchvision = "^0.18.1"
tensorboard = "^2.17.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
